fix: navigation bar cannot be expanded on mobile

--- a/components/MainNavigator.module.less
+++ b/components/MainNavigator.module.less
@@ -11,6 +11,7 @@
   z-index: 3;
   background: #029950;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  display: block;
   li {
     float: left;
     font-size: 18px;
@@ -22,6 +23,10 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    display: block;
+    --bs-nav-link-padding-x: initial;
+    --bs-nav-link-color: initial;
+    --bs-nav-link-hover-color: initial;
   }
   a {
     color: #f7f7f7;
@@ -38,21 +43,20 @@
 
 @media screen and (max-width: 620px) {
   .head_logo img {
-    width: 180px;
+    width: 115px;
   }
   .nav_bar {
-    display: none;
     z-index: 3;
     background: #029950;
     position: absolute;
-    top: 50px;
-    left: 0;
-    right: 0;
-    border-top: 1px solid #f8f8f8;
+    right: 10%;
     ul {
       height: auto;
+      display: flex;
+      flex-direction: row;
       li {
         float: none;
+        font-size: 10px;
       }
     }
   }
@@ -63,6 +67,11 @@
     }
     .nav_toggle {
       display: block;
+      width: 35px;
+      height: 30px;
+    }
+    li {
+      padding: 0 6px;
     }
   }
 }
